--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,20 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+cffi==1.16.0
+cryptography==42.0.0
+dj-database-url==2.1.0
 Django==4.2.9
 django-environ==0.11.2
+django-health-check==3.17.0
+django-jazzmin==2.6.0
+djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==23.2
+pillow==10.2.0
+psycopg2-binary==2.9.9
+pycparser==2.21
+pyscopg2==66.0.2
+pytz==2023.3.post1
 sqlparse==0.4.4
 typing-extensions==4.9.0
+whitenoise==6.6.0
