--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,75 @@
 asgiref
-backports.zoneinfo
+build
+CacheControl
+certifi
 cffi
+charset-normalizer
+cleo
+crashtest
 cryptography
+defusedxml
+distlib
 dj-database-url
 Django
 django-environ
 django-health-check
 django-jazzmin
+django-js-asset
+django-phonenumber-field
+django-templated-mail
+django-user-visit
 djangorestframework
+djangorestframework-simplejwt
+djoser
+dulwich
+fastjsonschema
+filelock
 gunicorn
+idna
+importlib-metadata
+importlib-resources
+installer
+jaraco.classes
+jeepney
+keyring
+more-itertools
+msgpack
+oauthlib
 packaging
-pillow
+pexpect
+phonenumberslite
+Pillow
+pkginfo
+platformdirs
+poetry
+poetry-core
+poetry-plugin-export
+psutil
 psycopg2-binary
+ptyprocess
 pycparser
-pyscopg2
+PyJWT
+pyproject_hooks
+python3-openid
 pytz
+rapidfuzz
+requests
+requests-oauthlib
+requests-toolbelt
+SecretStorage
+segno
+shellingham
+six
+social-auth-app-django
+social-auth-core
 sqlparse
-typing-extensions
+tomli
+tomlkit
+trove-classifiers
+typing_extensions
+ua-parser
+urllib3
+user-agents
+virtualenv
 whitenoise
+zipp
