--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,75 +1,37 @@
-asgiref
-build
-CacheControl
-certifi
-cffi
-charset-normalizer
-cleo
-crashtest
-cryptography
-defusedxml
-distlib
-dj-database-url
-Django
-django-environ
-django-health-check
-django-jazzmin
-django-js-asset
-django-phonenumber-field
-django-templated-mail
-django-user-visit
-djangorestframework
-djangorestframework-simplejwt
-djoser
-dulwich
-fastjsonschema
-filelock
-gunicorn
-idna
-importlib-metadata
-importlib-resources
-installer
-jaraco.classes
-jeepney
-keyring
-more-itertools
-msgpack
-oauthlib
-packaging
-pexpect
-phonenumberslite
-Pillow
-pkginfo
-platformdirs
-poetry
-poetry-core
-poetry-plugin-export
-psutil
-psycopg2-binary
-ptyprocess
-pycparser
-PyJWT
-pyproject_hooks
-python3-openid
-pytz
-rapidfuzz
-requests
-requests-oauthlib
-requests-toolbelt
-SecretStorage
-segno
-shellingham
-six
-social-auth-app-django
-social-auth-core
-sqlparse
-tomli
-tomlkit
-trove-classifiers
-typing_extensions
-ua-parser
-urllib3
-user-agents
-virtualenv
-whitenoise
-zipp
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.0
+defusedxml==0.8.0rc2
+dj-database-url==2.1.0
+Django==4.2.9
+django-cors-headers==4.3.1
+django-environ==0.11.2
+django-health-check==3.17.0
+django-jazzmin==2.6.0
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.2
+gunicorn==21.2.0
+idna==3.6
+oauthlib==3.2.2
+packaging==23.2
+pillow==10.2.0
+psutil==5.9.8
+psycopg2-binary==2.9.9
+pycparser==2.21
+PyJWT==2.8.0
+pyscopg2==66.0.2
+python3-openid==3.2.0
+pytz==2023.3.post1
+requests==2.31.0
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.1
+social-auth-core==4.5.4
+sqlparse==0.4.4
+typing-extensions==4.9.0
+urllib3==2.1.0
+whitenoise==6.6.0
